# custom-basic-linear-algebra-subprograms

./: .bash_profile  .gitignore  .gitlab-ci.yml  .gitmodules  .guix-extra  CMakeCache.txt  CMakeLists.txt  README.md  channels.scm  plafrim-formation-env.sh
algonum/: CMakeLists.txt  perf.c  test_ddot.c  test_dgemm.c  test_dgetrf.c  tile.c
algonum/include/: algonum.h  algonum_int.h  codelets.h  config.h.in
myblas/: CMakeLists.txt  ddot_seq.c  dgemm_gpu.cu  dgemm_mkl.c  dgemm_omp.c  dgemm_seq.c  dgemm_tiled_mpi.c  dgemm_tiled_omp.c  dgetrf_gpu.cu  dgetrf_mkl.c  dgetrf_omp.c  dgetrf_seq.c  dgetrf_tiled_omp.c  myblas.h  tools.c
myblas/experiments/: extract.py
myblas/experiments/ddot/: ddot_exp.sh  ddot_exp_job.slm  ddot_job.slm  ddot_job_runner.sh  ddot_stats.sh
myblas/experiments/dgemm/: dgemm_exp.sh  dgemm_exp_bloc.sh  dgemm_exp_job.slm  dgemm_exp_meilleurblock.sh  dgemm_exp_omp.sh  dgemm_exp_tmp.sh  dgemm_exp_vecto_bloc.sh  dgemm_job.slm  dgemm_job_runner.sh  dgemm_size.sh
myblas/experiments/dgetrf/: dgetrf_exp.sh  dgetrf_exp_job.slm  dgetrf_job.slm  dgetrf_job_runner.sh  dgetrf_size.sh  perf_bloc.csv  perf_seq.csv
myblas/graph/: example_graph_r.r
testings/: check_ddot.c  common.c  perf_dgemm.c  perf_dgetrf.c
tutorial/: setup-cisd.org  setup-guix.org  setup-guixmodules.org  setup-ide.org  setup-plafrim.org  setup.org  step1-sequential.org  step2-vecto.org  step3-omp.org  step4-mpi.org  step5-cuda.org  tuto-chameleon.org
